<resources>
    <string name="app_name">My Movies</string>
    <string name="judul">Judul</string>
    <string name="desk">Deskripsi</string>
    <string name="tahunRilis">2018</string>
    <string name="_95">95%</string>
    <string name="judulDetail">Judul detail</string>
    <string name="status">Status</string>
    <string name="statusReleased">Released</string>
    <string name="skorPengunjung">Skor Pengunjung</string>
    <string name="skorDetail">Skor80</string>
    <string name="genre">Drama , Comedy</string>
    <string name="waktuTayang">Waktu Tayang</string>
    <string name="bahasaFilm">Bahasa</string>
    <string name="_1h_0m">1h 0m</string>
    <string name="english">English</string>
    <string name="overview">Overview</string>
    <string name="deskdetail">Deskripsi Detail</string>

    <string-array name="data_judul">
        <item>Aquaman</item>
        <item>A Star Is Born</item>
        <item>Avengers: Infinity War</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Bird Box</item>
        <item>Once Upon a Deadpool</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Mortal Engines</item>
    </string-array>

    <string-array name="data_deskripsi">
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Allys career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have 			fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock n roll band Queen in 1970. Hit songs become instant classics. When Mercurys increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the 			band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>A kidnapped Fred Savage is forced to endure Deadpools PG-13 rendition of Deadpool 2 as a Princess Bride-esque story thats full of magic, wonder and zero Fs.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup’s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>Many thousands of years in the future, Earth’s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever.</item>
    </string-array>

    <array name="data_posterfilm">

        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_mortalengine</item>
    </array>

    <string-array name="data_skorpengunjung">
        <item>68%</item>
        <item>75%</item>
        <item>83%</item>
        <item>84%</item>
        <item>80%</item>
        <item>65%</item>
        <item>69%</item>
        <item>69%</item>
        <item>77%</item>
        <item>61%</item>

    </string-array>

    <string-array name="data_durasi">
        <item>2h 24m</item>
        <item>2h 16m</item>
        <item>2h 29m</item>
        <item>1h 57m</item>
        <item>2h 15m</item>
        <item>1h 54m</item>
        <item>2h 4m</item>
        <item>1h 57m</item>
        <item>1h 44m</item>
        <item>2h 9m</item>

    </string-array>

    <string-array name="data_status">
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>
        <item>Released</item>

    </string-array>

    <string-array name="data_genres">
        <item>Action, Adventure, Fantasy</item>
        <item>Drama, Romance, Music</item>
        <item>Adventure, Action, Science Fiction</item>
        <item>Action, Adventure, Science Fiction, Animation, Comedy</item>
        <item>Drama, Music</item>
        <item>Action, Adventure, Science Fiction</item>
        <item>Thriller, Drama</item>
        <item>Comedy, Action</item>
        <item>Animation, Family, Adventure</item>
        <item>Adventure, Fantasy</item>

    </string-array>

    <string-array name="data_bahasa">
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>

    </string-array>

    <string-array name="data_tahun">
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>

    </string-array>

</resources>
